--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "main": "index.ts",
   "scripts": {
     "start": "node dist/index.ts",
-    "dev": "nodemon --watch src --ext ts --exec ts-node ./src/index.ts"
+    "dev": "nodemon --watch src --ext ts --exec ts-node ./src/index.ts",
+    "seed": "ts-node src/config/seed.ts"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -24,9 +25,11 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.14.0",
     "serverless-http": "^3.2.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.7.0",
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.14.1",
