--- a/package.json
+++ b/package.json
@@ -22,14 +22,17 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.0",
+    "path-to-regexp": "^8.2.0",
     "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^9.7.0",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.14.1",
