--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "main": "index.ts",
   "scripts": {
     "start": "node dist/index.ts",
+    "build": "tsc",
     "dev": "nodemon --watch src --ext ts --exec ts-node ./src/index.ts",
     "seed": "ts-node src/config/seed.ts"
   },
