--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.0",
+    "mysql2": "^3.14.1",
     "path-to-regexp": "^8.2.0",
+    "sequelize": "^6.37.7",
     "serverless-http": "^3.2.0"
   },
   "devDependencies": {
