--- a/.github/workflows/action1.yml
+++ b/.github/workflows/action1.yml
@@ -18,7 +18,11 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm ci
+    - name: Install dependencies
+      run: npm install
+
+    - name: Run build
+      run: npm run build
     - name: serverless deploy
       uses: serverless/github-action@v3.2
       with:
