--- a/.github/workflows/action1.yml
+++ b/.github/workflows/action1.yml
@@ -23,10 +23,10 @@ jobs:
 
     - name: Run build
       run: npm run build
-    - name: serverless deploy
-      uses: serverless/github-action@v3.2
-      with:
-        args: deploy
+    - name: install serverless
+      run: npm install -g serverless
+    - name: run serverless
+      run: serverless deploy
       env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
+        AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
