configured env to work with github

--- a/serverless.yml
+++ b/serverless.yml
@@ -26,6 +26,9 @@ provider:
         - Content-Type
         - Authorization
       allowCredentials: true
+  environment:
+    DB_CONN_STRING: ${env:DB_CONN_STRING}
+    DB_NAME: ${env:DB_NAME}
 functions:
   app:
     handler: dist/index.handler
