--- a/.github/workflows/action1.yml
+++ b/.github/workflows/action1.yml
@@ -31,3 +31,5 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_REGION: eu-west-3
+        DB_CONN_STRING: ${{ secrets.DB_CONN_STRING }}
+        DB_NAME: ${{ secrets.DB_NAME }}
