--- a/serverless.yml
+++ b/serverless.yml
@@ -15,6 +15,7 @@ provider:
   environment:
     DB_CONN_STRING: ${env:DB_CONN_STRING}
     DB_NAME: ${env:DB_NAME}
+    SECRET_KEY: ${env:SECRET_KEY}
   httpApi:
     cors:
       allowedOrigins:
